--- a/.github/workflows/codesee-arch-diagram.yml
+++ b/.github/workflows/codesee-arch-diagram.yml
@@ -3,7 +3,7 @@ on:
   schedule:
     - cron: '25 0/12 * * 1-5' # Build once every 12 hours, starting at 25 minutes past the hour (UTC)
 
-name: CodeSee Map
+name: CI - Create CodeSee Maps
 
 jobs:
   test_map_action:
