--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -22,6 +22,7 @@ jobs:
             espanol,
             french,
             german,
+            indonesian,
             italian,
             japanese,
             korean,
@@ -65,6 +66,10 @@ jobs:
       GERMAN_GHOST_API_URL: ${{ secrets.GERMAN_GHOST_API_URL }}
       GERMAN_GHOST_API_VERSION: ${{ secrets.GERMAN_GHOST_API_VERSION }}
       GERMAN_GHOST_CONTENT_API_KEY: ${{ secrets.GERMAN_GHOST_CONTENT_API_KEY }}
+
+      INDONESIAN_GHOST_API_URL: ${{ secrets.INDONESIAN_GHOST_API_URL }}
+      INDONESIAN_GHOST_API_VERSION: ${{ secrets.INDONESIAN_GHOST_API_VERSION }}
+      INDONESIAN_GHOST_CONTENT_API_KEY: ${{ secrets.INDONESIAN_GHOST_CONTENT_API_KEY }}
 
       ITALIAN_GHOST_API_URL: ${{ secrets.ITALIAN_GHOST_API_URL }}
       ITALIAN_GHOST_API_VERSION: ${{ secrets.ITALIAN_GHOST_API_VERSION }}
