feat: enable deployments from ACR

--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -168,6 +168,7 @@ jobs:
             espanol,
             french,
             german,
+            indonesian,
             italian,
             japanese,
             korean,
