--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@11ty/eleventy-upgrade-help": "1.0.1",
     "@tryghost/content-api": "1.11.5",
     "@tryghost/helpers": "1.1.75",
+    "algoliasearch": "4.14.2",
     "clean-css": "5.3.1",
     "cross-env": "7.0.3",
     "cypress": "10.11.0",
