revert: build the chinese news again
This reverts commit 5dbca7193b89c3f7c94322cafe5352166e02c457.

--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -14,10 +14,11 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [18.x]
-        languages: [
+        languages:
+          [
             arabic,
             bengali,
-            # chinese,
+            chinese,
             espanol,
             french,
             german,
@@ -159,10 +160,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        languages: [
+        languages:
+          [
             arabic,
             bengali,
-            # chinese,
+            chinese,
             espanol,
             french,
             german,
