chore: remove urdu and french from builds

--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -18,13 +18,11 @@ jobs:
           [
             chinese,
             espanol,
-            french,
             italian,
             japanese,
             korean,
             portuguese,
-            ukrainian,
-            urdu
+            ukrainian
           ]
         site_tlds: [org]
 
@@ -139,13 +137,11 @@ jobs:
           [
             chinese,
             espanol,
-            french,
             italian,
             japanese,
             korean,
             portuguese,
-            ukrainian,
-            urdu
+            ukrainian
           ]
         site_tlds: [org]
 
