--- a/.github/workflows/crowdin-download.yml
+++ b/.github/workflows/crowdin-download.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - name: Checkout Source Files
-        uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3
+        uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
         with:
           token: ${{ secrets.CROWDIN_CAMPERBOT_PAT }}
 
@@ -28,152 +28,7 @@ jobs:
           PLUGIN: 'generate-config'
           PROJECT_NAME: 'news'
 
-        ##### Download Chinese #####
-      - name: Crowdin Download Chinese Translations
-        uses: crowdin/github-action@master
-        # options: https://github.com/crowdin/github-action/blob/master/action.yml
-        with:
-          # uploads
-          upload_sources: false
-          upload_translations: false
-          auto_approve_imported: false
-          import_eq_suggestions: false
-
-          # downloads
-          download_translations: true
-          download_language: zh-CN
-          skip_untranslated_files: false
-          export_only_approved: true
-
-          push_translations: false
-
-          # pull-request
-          create_pull_request: false
-
-          # global options
-          config: './crowdin-config.yml'
-          base_url: ${{ secrets.CROWDIN_BASE_URL_FCC }}
-
-          # Uncomment below to debug
-          # dryrun_action: true
-
-        ##### Download French #####
-      - name: Crowdin Download French Translations
-        uses: crowdin/github-action@master
-        # options: https://github.com/crowdin/github-action/blob/master/action.yml
-        with:
-          # uploads
-          upload_sources: false
-          upload_translations: false
-          auto_approve_imported: false
-          import_eq_suggestions: false
-
-          # downloads
-          download_translations: true
-          download_language: fr
-          skip_untranslated_files: false
-          export_only_approved: true
-
-          push_translations: false
-
-          # pull-request
-          create_pull_request: false
-
-          # global options
-          config: './crowdin-config.yml'
-          base_url: ${{ secrets.CROWDIN_BASE_URL_FCC }}
-
-          # Uncomment below to debug
-          # dryrun_action: true
-
-        ##### Download Italian #####
-      - name: Crowdin Download Italian Translations
-        uses: crowdin/github-action@master
-        # options: https://github.com/crowdin/github-action/blob/master/action.yml
-        with:
-          # uploads
-          upload_sources: false
-          upload_translations: false
-          auto_approve_imported: false
-          import_eq_suggestions: false
-
-          # downloads
-          download_translations: true
-          download_language: it
-          skip_untranslated_files: false
-          export_only_approved: true
-
-          push_translations: false
-
-          # pull-request
-          create_pull_request: false
-
-          # global options
-          config: './crowdin-config.yml'
-          base_url: ${{ secrets.CROWDIN_BASE_URL_FCC }}
-
-          # Uncomment below to debug
-          # dryrun_action: true
-
-        ##### Download Japanese #####
-      - name: Crowdin Download Japanese Translations
-        uses: crowdin/github-action@master
-        # options: https://github.com/crowdin/github-action/blob/master/action.yml
-        with:
-          # uploads
-          upload_sources: false
-          upload_translations: false
-          auto_approve_imported: false
-          import_eq_suggestions: false
-
-          # downloads
-          download_translations: true
-          download_language: ja
-          skip_untranslated_files: false
-          export_only_approved: true
-
-          push_translations: false
-
-          # pull-request
-          create_pull_request: false
-
-          # global options
-          config: './crowdin-config.yml'
-          base_url: ${{ secrets.CROWDIN_BASE_URL_FCC }}
-
-          # Uncomment below to debug
-          # dryrun_action: true
-
-        ##### Download Korean #####
-      - name: Crowdin Download Korean Translations
-        uses: crowdin/github-action@master
-        # options: https://github.com/crowdin/github-action/blob/master/action.yml
-        with:
-          # uploads
-          upload_sources: false
-          upload_translations: false
-          auto_approve_imported: false
-          import_eq_suggestions: false
-
-          # downloads
-          download_translations: true
-          download_language: ko
-          skip_untranslated_files: false
-          export_only_approved: true
-
-          push_translations: false
-
-          # pull-request
-          create_pull_request: false
-
-          # global options
-          config: './crowdin-config.yml'
-          base_url: ${{ secrets.CROWDIN_BASE_URL_FCC }}
-
-          # Uncomment below to debug
-          # dryrun_action: true
-
-        ##### Download Portuguese (Brazilian) #####
+        ##### Download Brazilian Portuguese #####
       - name: Crowdin Download Portuguese (Brazilian) Translations
         uses: crowdin/github-action@master
         # options: https://github.com/crowdin/github-action/blob/master/action.yml
@@ -202,92 +57,12 @@ jobs:
           # Uncomment below to debug
           # dryrun_action: true
 
-        ##### Download Spanish #####
-      - name: Crowdin Download Spanish Translations
-        uses: crowdin/github-action@master
-        # options: https://github.com/crowdin/github-action/blob/master/action.yml
-        with:
-          # uploads
-          upload_sources: false
-          upload_translations: false
-          auto_approve_imported: false
-          import_eq_suggestions: false
-
-          # downloads
-          download_translations: true
-          download_language: es-EM
-          skip_untranslated_files: false
-          export_only_approved: true
-
-          push_translations: false
-
-          # pull-request
-          create_pull_request: false
-
-          # global options
-          config: './crowdin-config.yml'
-          base_url: ${{ secrets.CROWDIN_BASE_URL_FCC }}
-
-          # Uncomment below to debug
-          # dryrun_action: true
-
-        ##### Download Ukrainian #####
-      - name: Crowdin Download Ukrainian Translations
-        uses: crowdin/github-action@master
-        # options: https://github.com/crowdin/github-action/blob/master/action.yml
-        with:
-          # uploads
-          upload_sources: false
-          upload_translations: false
-          auto_approve_imported: false
-          import_eq_suggestions: false
-
-          # downloads
-          download_translations: true
-          download_language: uk
-          skip_untranslated_files: false
-          export_only_approved: true
-
-          push_translations: false
-
-          # pull-request
-          create_pull_request: false
-
-          # global options
-          config: './crowdin-config.yml'
-          base_url: ${{ secrets.CROWDIN_BASE_URL_FCC }}
-
-          # Uncomment below to debug
-          # dryrun_action: true
-
-        ##### Download Urdu #####
-      - name: Crowdin Download Urdu Translations
-        uses: crowdin/github-action@master
-        # options: https://github.com/crowdin/github-action/blob/master/action.yml
-        with:
-          # uploads
-          upload_sources: false
-          upload_translations: false
-          auto_approve_imported: false
-          import_eq_suggestions: false
-
-          # downloads
-          download_translations: true
-          download_language: ur
-          skip_untranslated_files: false
-          export_only_approved: true
-
-          push_translations: false
-
-          # pull-request
-          create_pull_request: false
-
-          # global options
-          config: './crowdin-config.yml'
-          base_url: ${{ secrets.CROWDIN_BASE_URL_FCC }}
-
-          # Uncomment below to debug
-          # dryrun_action: true
+      # # Convert Simplified Chinese to Traditional #
+      # - name: Convert Chinese
+      #   uses: freecodecamp/crowdin-action@main
+      #   env:
+      #     PLUGIN: 'convert-chinese'
+      #     FILE_PATHS: '["/docs/i18n/chinese/"]'
 
       # Create Commit
       - name: Commit Changes
